# split-by-gene

./: README.md  split-by-gene.cabal
app/: Main.hs
src/: Split.hs
