name:                split-by-gene
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/split-by-gene#readme
license:             GPLv2
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gregory.schwartz@drexel.edu
copyright:           Copyright 2015 Gregory W. Schwartz
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Split
  build-depends:       base >= 4.7 && < 5
                     , fasta
                     , text
  default-language:    Haskell2010

executable split-by-gene
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , split-by-gene
                     , text
                     , pipes
                     , pipes-text
                     , fasta
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/split-by-gene
